@@ -13,6 +13,8 @@ REVISION HISTORY
 ------------------
 2013-11-01
 
+ r30 add [if test "$host" != "sparc*" ; then] to switch K/FX cross-compile [ver 1.4.1]
+
  r29 expire MPICH version
 
  r28 Compilation on K/FX
